# amc

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/config/: Config.cpp
lib/dkm/include/: dkm.hpp
lib/hetcaller/: HetCaller.cpp  HetCaller.h
lib/inputparser/: InputParser.cpp  InputParser.h
lib/mathfunc/: MathFunc.cpp  MathFunc.h
lib/matrix/: Matrix.h
lib/mydefine/: MyDefine.cpp  MyDefine.h
lib/pca/: PCA.cpp  PCA.h
lib/threadpool/: ThreadPool.cpp  ThreadPool.h
src/: amc.cpp
testdata/: example.txt
